' Generated by UML Generator
' Encoded: TLF1Rjim3BtxAtHqcXeOTZI6eKEBhXqwR420xKpBhCnMaGn9IO0L_VTHaXshINknhCV7Hufwkl81NDXjTUMVoOpWO2ka1k-_XU2esmMybzPiw1-AJzL0FGf9JcgigiGIrs3suCLB9KJpmbg1vAkG2ToGKHg3DUt4Yfn7Be2j-74RrmXaxapv3IQXoi4ua6p5z_pZFzz4k0Fvh9pTcVxQQhjpdCQhMtJkjw1OFYqHjTqJoi3o3-J3brzfzpK6_00ZCdu7VlW9unIw59k8tw2NZiP0rYHo4p-vmJfGq5nXmzCnwb8Sg0z3AyXmxe2aXZ1jElMcnHLBh8y3KXWckLKndBN7y8SyTHhhVLvRqLch4GppzfRwoEeT76g7Z-ZGICoDjs8-W8pLblxIETjyh4837NZyIAJWSKUtrk4oSrUd0bb-BbCa7812lIMjoICRf_Tf70kXSPZwBv3SIw71quc6otFv6oCiSHQucmElRxqOBPJyk1w1mxLQJ3JNE6QStdRsSJcpPAtp4y-kM9ygr6NooMsiZhVtZhsBtgOtTT4qipVEaFHE9jGoUjf6TOMcvrVz7m
' URL: http://www.plantuml.com/plantuml/uml/TLF1Rjim3BtxAtHqcXeOTZI6eKEBhXqwR420xKpBhCnMaGn9IO0L_VTHaXshINknhCV7Hufwkl81NDXjTUMVoOpWO2ka1k-_XU2esmMybzPiw1-AJzL0FGf9JcgigiGIrs3suCLB9KJpmbg1vAkG2ToGKHg3DUt4Yfn7Be2j-74RrmXaxapv3IQXoi4ua6p5z_pZFzz4k0Fvh9pTcVxQQhjpdCQhMtJkjw1OFYqHjTqJoi3o3-J3brzfzpK6_00ZCdu7VlW9unIw59k8tw2NZiP0rYHo4p-vmJfGq5nXmzCnwb8Sg0z3AyXmxe2aXZ1jElMcnHLBh8y3KXWckLKndBN7y8SyTHhhVLvRqLch4GppzfRwoEeT76g7Z-ZGICoDjs8-W8pLblxIETjyh4837NZyIAJWSKUtrk4oSrUd0bb-BbCa7812lIMjoICRf_Tf70kXSPZwBv3SIw71quc6otFv6oCiSHQucmElRxqOBPJyk1w1mxLQJ3JNE6QStdRsSJcpPAtp4y-kM9ygr6NooMsiZhVtZhsBtgOtTT4qipVEaFHE9jGoUjf6TOMcvrVz7m
' Generated on: 2025-10-10T23:39:44.322441

@startuml
skinparam classAttributeIconSize 0
hide circle

class Canvas {
  -{static} canvasSingleton: Canvas
  -frame: JFrame
  -canvas: CanvasPane
  -graphic: Graphics2D
  -backgroundColour: Color
  -canvasImage: Image
  -objects: List<Object>
  -shapes: HashMap<Object, ShapeDescription>
  --
  -Canvas(title: String, width: int, height: int, bgColour: Color)
  +{static} getCanvas(): Canvas
  +setVisible(visible: boolean): void
  +draw(referenceObject: Object, color: String, shape: Shape): void
  +erase(referenceObject: Object): void
  +setForegroundColor(colorString: String): void
  +wait(milliseconds: int): void
  -redraw(): void
  -erase(): void
  +getSizeCanvasW(): int
  +getSizeCanvasH(): int
}

class CanvasPane {
  +paint(g: Graphics): void
}

class ShapeDescription {
  -shape: Shape
  -colorString: String
  --
  +ShapeDescription(shape: Shape, color: String)
  +draw(graphic: Graphics2D): void
}

Canvas *-- Canvas
Canvas *-- CanvasPane
Canvas o-- ShapeDescription
@enduml